# FSter

./: .gitignore  AUTHORS  CMakeLists.txt  HOW_TO_USE  INSTALL  Makefile.am  README  autogen.sh  avfs_do.c  common.h  configure.ac  doxygen  fuse.c  hierarchy.c  hierarchy.h
cmake/Modules/: CustomFind.cmake  FindTracker.cmake
conf/: FSter.xsd  commented.xml  fster_media_library.xml  music.xml
config/: avfs.xml
content-plugins/: CMakeLists.txt  Makefile.am  contents-dumpmetadata-plugin.c  contents-dumpmetadata-plugin.h  contents-real-plugin.c  contents-real-plugin.h
src/: CMakeLists.txt  Makefile.am  common.h  config.h.cmake  contents-plugin.c  contents-plugin.h  core.h  fuse.c  gfuse-loop.c  gfuse-loop.h  hierarchy-node.c  hierarchy-node.h  hierarchy.c  hierarchy.h  item-handler.c  item-handler.h  nodes-cache.c  nodes-cache.h  property-handler.c  property-handler.h  property.c  property.h  utils.c  utils.h
tests/: set_get_metadata.c  test_easy_populate.sh  test_parallel_populate.sh
